      (was -3).

      \item Change license from GPL (>= 2) to GPL-3.

    }
  }

  \subsection{REMOVED FEATURES}{
    \itemize{

      \item Remove exports of \code{cgl()}, \code{hkf()}, and \code{AD()}.
      \code{subcrt()} should be used for all calculations of thermodynamic
      properties.

      \item \code{EOSregress()} and the associated demo and vignette have been
      removed.

    }
  }

  \subsection{BUG FIXES}{
    \itemize{

      \item Add \code{stringsAsFactors = FALSE} to a \code{cbind()} call in
      \code{mix()}, needed for \R < 4.0.0. Thanks to Xiaojia Jiang for the bug
      report.

      \item In \strong{multi-metal.Rmd}, work around absence of
      \code{hcl.colors()} in \R < 3.6.0.

      \item \code{diagram()}: Improve handling of length > 2 \code{col},
      \code{lty} and \code{lwd} arguments for predominance diagrams. Because
      field boundaries are drawn for the first species, then removing that
      species before drawing boundaries for the second species, etc., species
      for which different-colored or -styled lines are desired should be placed
      at the top of the species list. This change makes possible one less call
      to \code{diagram()} in the Mosaic Stacking sections in
      \strong{multi-metal.Rmd}, and now the entire chalcopyrite field in Mosaic
      Stacking 2 is bounded by a thick orange line, instead of just the
      border shared with bornite.

      \item Improve handling of non-integer coefficients in
      \code{expr.species()}. The result for FeS1.33 was previously equivalent
      to FeS[.33] but is now shown correctly as FeS[1.33].

    }
  }

}

\section{Changes in CHNOSZ version 1.4.3 (2022-02-20)}{

  \subsection{UNIT TESTING}{
    \itemize{

      \item Skip tests on CRAN that fail for M1mac and ATLAS (heat capacity and
      the second derivative of \H2O density in \file{tinytest/test-AD.R}).

    }
  }

}

\section{Changes in CHNOSZ version 1.4.2 (2022-02-08)}{
